@@ -115,6 +115,27 @@ describe Rufus::Scheduler::EveryJob do
         expect(nt1).to eq(fa1)
       end
     end
+
+    describe '#previous_time' do
+
+      it 'returns the previous #time' do
+
+        t0 = nil
+        t1 = nil
+
+        job =
+          @scheduler.schedule_every '1s' do |j|
+            t1 = Time.now
+            t0 = j.previous_time
+          end
+        t = job.next_time
+
+        sleep 1.4
+
+        expect(t0).to eq(t)
+        expect(t1).to be > t
+      end
+    end
   end
 end
 
